// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PCard behaviour flips when clicked 1`] = `
<div
  class="PCard"
  id="test"
  tabindex="0"
>
  <div
    class="PCard__front"
  >
    
    
  </div>
  <div
    class="PCard__back"
  >
    
    
  </div>
</div>
`;

exports[`PCard behaviour flips when the enter or space button is pressed 1`] = `
<div
  class="PCard"
  id="test"
  tabindex="0"
>
  <div
    class="PCard__front"
  >
    
    
  </div>
  <div
    class="PCard__back"
  >
    
    
  </div>
</div>
`;

exports[`PCard rendering renders card 1`] = `
<div
  class="PCard"
  tabindex="0"
>
  <div
    class="PCard__front"
  >
    
    
  </div>
  <div
    class="PCard__back"
  >
    
    
  </div>
</div>
`;

exports[`PCard rendering renders flipped card 1`] = `
<div
  class="PCard PCard--flip CustomCardClass"
  id="test"
  tabindex="0"
>
  <div
    class="PCard__front"
  >
    
    
  </div>
  <div
    class="PCard__back"
  >
    
    
  </div>
</div>
`;
